--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <style amp-custom>
       /* any custom style goes here */
       :root {
-        --primary: #43b35c;
+        --primary: #52d36f;
         --secondary: #4a4a4a;
         --light: #ffffff;
         --dark: #ffffff;
@@ -1288,9 +1288,7 @@
                   >
                     <h4
                       class="m-0 p-3 bg-primary"
-                      style="
-                        border-bottom: 2px solid var(--primary);
-                      "
+                      style="border-bottom: 2px solid var(--primary)"
                     >
                       DATA ANALYTICS ENGINES
                     </h4>
@@ -1308,9 +1306,7 @@
                   >
                     <h4
                       class="m-0 p-3 bg-primary"
-                      style="
-                        border-bottom: 2px solid var(--primary);
-                      "
+                      style="border-bottom: 2px solid var(--primary)"
                     >
                       WEB FRAMEWORKS
                     </h4>
@@ -1333,9 +1329,7 @@
                   >
                     <h4
                       class="m-0 p-3 bg-primary"
-                      style="
-                        border-bottom: 2px solid var(--primary);
-                      "
+                      style="border-bottom: 2px solid var(--primary)"
                     >
                       MOBILE FRAMEWORKS
                     </h4>
@@ -1354,9 +1348,7 @@
                   >
                     <h4
                       class="m-0 p-3 bg-primary"
-                      style="
-                        border-bottom: 2px solid var(--primary);
-                      "
+                      style="border-bottom: 2px solid var(--primary)"
                     >
                       DATABASE TECHNOLOGIES
                     </h4>
@@ -1730,9 +1722,7 @@
             <section>
               <p
                 class="m-0 p-3 bg-primary"
-                style="
-                  border-bottom: 2px solid var(--primary);
-                "
+                style="border-bottom: 2px solid var(--primary)"
               >
                 <a
                   href="https://www.linkedin.com/posts/activity-6714863540806676481-gUBb"
