--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       }
     </style>
     <style amp-custom>
-      /* any custom style goes here */
+      /* any custom style goes here #52d36f */
       :root {
         --primary: #52d36f;
         --secondary: #4a4a4a;
