--- a/index.html
+++ b/index.html
@@ -792,6 +792,16 @@
           >
             <li class="px-1">
               <a
+                href="https://github.com/Eliah7"
+                class="text-decoration-none"
+                target="_blank"
+                rel="nofollow noreferrer"
+              >
+                <i class="bi-github" style="font-size: 1.2rem"></i
+              ></a>
+            </li>
+            <li class="px-1">
+              <a
                 href="mailto:eliahmbwilo7@gmail.com"
                 class="text-decoration-none"
                 target="_blank"
