figures and articles

--- a/index.html
+++ b/index.html
@@ -1007,6 +1007,47 @@
                 </li>
               </ul>
             </blockquote>
+            <section class="row">
+              <div class="col-xs-12 col-md-6">
+                <article class=""></article>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <figure class="gallery-fixed-container">
+                  <amp-img
+                    class="cover"
+                    layout="fill"
+                    src="eliah-girls-ict-award-3.jpg"
+                    alt="Team work"
+                  ></amp-img>
+                </figure>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <figure class="gallery-fixed-container">
+                  <amp-img
+                    class="cover"
+                    layout="fill"
+                    src="eliah-girls-ict-award-3.jpg"
+                    alt="Software and hardware analysis"
+                  ></amp-img>
+                </figure>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <article class=""></article>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <article class=""></article>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <figure class="gallery-fixed-container">
+                  <amp-img
+                    class="cover"
+                    layout="fill"
+                    src="eliah-girls-ict-award-3.jpg"
+                    alt="Programs review"
+                  ></amp-img>
+                </figure>
+              </div>
+            </section>
           </amp-layout>
         </div>
         <!-- competencies panel -->
