--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
                   <amp-img
                     class="cover"
                     layout="fill"
-                    src="eliah-girls-ict-award-3.jpg"
+                    src="team-work.svg"
                     alt="Team work"
                   ></amp-img>
                 </figure>
@@ -1026,7 +1026,7 @@
                   <amp-img
                     class="cover"
                     layout="fill"
-                    src="eliah-girls-ict-award-3.jpg"
+                    src="software-analysis.svg"
                     alt="Software and hardware analysis"
                   ></amp-img>
                 </figure>
@@ -1042,7 +1042,7 @@
                   <amp-img
                     class="cover"
                     layout="fill"
-                    src="eliah-girls-ict-award-3.jpg"
+                    src="programs-review.svg"
                     alt="Programs review"
                   ></amp-img>
                 </figure>
