--- a/index.html
+++ b/index.html
@@ -1009,12 +1009,14 @@
             </blockquote>
             <section class="row">
               <div class="col-xs-12 col-md-6">
-                <article class=""></article>
+                <article class="flex middle-xs center-xs">
+                  <h4>Ability to work well with others in a team or alone.</h4>
+                </article>
               </div>
               <div class="col-xs-12 col-md-6">
                 <figure class="gallery-fixed-container">
                   <amp-img
-                    class="cover"
+                    class="contain"
                     layout="fill"
                     src="team-work.svg"
                     alt="Team work"
@@ -1024,7 +1026,7 @@
               <div class="col-xs-12 col-md-6">
                 <figure class="gallery-fixed-container">
                   <amp-img
-                    class="cover"
+                    class="contain"
                     layout="fill"
                     src="software-analysis.svg"
                     alt="Software and hardware analysis"
@@ -1040,7 +1042,7 @@
               <div class="col-xs-12 col-md-6">
                 <figure class="gallery-fixed-container">
                   <amp-img
-                    class="cover"
+                    class="contain"
                     layout="fill"
                     src="programs-review.svg"
                     alt="Programs review"
