--- a/index.html
+++ b/index.html
@@ -1009,8 +1009,8 @@
             </blockquote>
             <section class="row">
               <div class="col-xs-12 col-md-6">
-                <article class="flex middle-xs center-xs">
-                  <h4>Ability to work well with others in a team or alone.</h4>
+                <article class="flex middle-xs center-xs h-100">
+                  <h3>Ability to work well with others in a team or alone.</h3>
                 </article>
               </div>
               <div class="col-xs-12 col-md-6">
@@ -1034,10 +1034,20 @@
                 </figure>
               </div>
               <div class="col-xs-12 col-md-6">
-                <article class=""></article>
+                <article class="flex middle-xs center-xs h-100">
+                  <h3>
+                    Ability to analyze software and hardware to find solutions
+                    that meet user requirements.
+                  </h3>
+                </article>
               </div>
               <div class="col-xs-12 col-md-6">
-                <article class=""></article>
+                <article class="flex middle-xs center-xs h-100">
+                  <h3>
+                    Ability to perform review of programs to improve efficiency,
+                    correct errors, and verify operational capability.
+                  </h3>
+                </article>
               </div>
               <div class="col-xs-12 col-md-6">
                 <figure class="gallery-fixed-container">
