--- a/index.html
+++ b/index.html
@@ -1009,12 +1009,12 @@
             </blockquote>
             <section class="row">
               <div class="col-xs-12 col-md-6">
-                <article class="flex middle-xs center-xs h-100">
+                <article class="flex middle-xs center-xs h-100 p-5">
                   <h3>Ability to work well with others in a team or alone.</h3>
                 </article>
               </div>
               <div class="col-xs-12 col-md-6">
-                <figure class="gallery-fixed-container">
+                <figure class="gallery-fixed-container m-0">
                   <amp-img
                     class="contain"
                     layout="fill"
@@ -1024,7 +1024,7 @@
                 </figure>
               </div>
               <div class="col-xs-12 col-md-6">
-                <figure class="gallery-fixed-container">
+                <figure class="gallery-fixed-container m-0">
                   <amp-img
                     class="contain"
                     layout="fill"
@@ -1034,7 +1034,7 @@
                 </figure>
               </div>
               <div class="col-xs-12 col-md-6">
-                <article class="flex middle-xs center-xs h-100">
+                <article class="flex middle-xs center-xs h-100 p-5">
                   <h3>
                     Ability to analyze software and hardware to find solutions
                     that meet user requirements.
@@ -1042,7 +1042,7 @@
                 </article>
               </div>
               <div class="col-xs-12 col-md-6">
-                <article class="flex middle-xs center-xs h-100">
+                <article class="flex middle-xs center-xs h-100 p-5">
                   <h3>
                     Ability to perform review of programs to improve efficiency,
                     correct errors, and verify operational capability.
@@ -1050,7 +1050,7 @@
                 </article>
               </div>
               <div class="col-xs-12 col-md-6">
-                <figure class="gallery-fixed-container">
+                <figure class="gallery-fixed-container m-0">
                   <amp-img
                     class="contain"
                     layout="fill"
