--- a/index.html
+++ b/index.html
@@ -1033,22 +1033,22 @@
                   ></amp-img>
                 </figure>
               </div>
-              <div class="col-xs-12 col-md-6">
-                <article class="flex middle-xs center-xs h-100 p-5">
-                  <h3>
-                    Ability to analyze software and hardware to find solutions
-                    that meet user requirements.
-                  </h3>
-                </article>
-              </div>
-              <div class="col-xs-12 col-md-6">
-                <article class="flex middle-xs center-xs h-100 p-5">
-                  <h3>
-                    Ability to perform review of programs to improve efficiency,
-                    correct errors, and verify operational capability.
-                  </h3>
-                </article>
-              </div>
+              <article
+                class="col-xs-12 col-md-6 flex middle-xs center-xs h-100 p-5"
+              >
+                <h3>
+                  Ability to analyze software and hardware to find solutions
+                  that meet user requirements.
+                </h3>
+              </article>
+              <article
+                class="col-xs-12 col-md-6 flex middle-xs center-xs h-100 p-5"
+              >
+                <h3>
+                  Ability to perform review of programs to improve efficiency,
+                  correct errors, and verify operational capability.
+                </h3>
+              </article>
               <div class="col-xs-12 col-md-6">
                 <figure class="gallery-fixed-container m-0">
                   <amp-img
