--- a/index.html
+++ b/index.html
@@ -1008,50 +1008,44 @@
               </ul>
             </blockquote>
             <section class="row">
-              <article class="col-xs-12 col-md-6 middle-xs center-xs p-5">
+              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
                 <h3>Ability to work well with others in a team or alone.</h3>
               </article>
-              <div class="col-xs-12 col-md-6">
-                <figure class="gallery-fixed-container m-0">
-                  <amp-img
-                    class="contain"
-                    layout="fill"
-                    src="team-work.svg"
-                    alt="Team work"
-                  ></amp-img>
-                </figure>
+              <div class="col-xs-12 col-md-6 gallery-fixed-container">
+                <amp-img
+                  class="contain"
+                  layout="fill"
+                  src="team-work.svg"
+                  alt="Team work"
+                ></amp-img>
               </div>
-              <div class="col-xs-12 col-md-6">
-                <figure class="gallery-fixed-container m-0">
-                  <amp-img
-                    class="contain"
-                    layout="fill"
-                    src="software-analysis.svg"
-                    alt="Software and hardware analysis"
-                  ></amp-img>
-                </figure>
+              <div class="col-xs-12 col-md-6 gallery-fixed-container">
+                <amp-img
+                  class="contain"
+                  layout="fill"
+                  src="software-analysis.svg"
+                  alt="Software and hardware analysis"
+                ></amp-img>
               </div>
-              <article class="col-xs-12 col-md-6 middle-xs center-xs p-5">
+              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
                 <h3>
                   Ability to analyze software and hardware to find solutions
                   that meet user requirements.
                 </h3>
               </article>
-              <article class="col-xs-12 col-md-6 middle-xs center-xs p-5">
+              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
                 <h3>
                   Ability to perform review of programs to improve efficiency,
                   correct errors, and verify operational capability.
                 </h3>
               </article>
-              <div class="col-xs-12 col-md-6">
-                <figure class="gallery-fixed-container m-0">
-                  <amp-img
-                    class="contain"
-                    layout="fill"
-                    src="programs-review.svg"
-                    alt="Programs review"
-                  ></amp-img>
-                </figure>
+              <div class="col-xs-12 col-md-6 gallery-fixed-container">
+                <amp-img
+                  class="contain"
+                  layout="fill"
+                  src="programs-review.svg"
+                  alt="Programs review"
+                ></amp-img>
               </div>
             </section>
           </amp-layout>
