--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
               <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
                 <h3>Ability to work well with others in a team or alone.</h3>
               </article>
-              <div class="col-xs-12 col-md-6 gallery-fixed-container">
+              <div class="col-xs-12 col-md-6 gallery-fixed-container p-5">
                 <amp-img
                   class="contain"
                   layout="fill"
@@ -1019,7 +1019,7 @@
                   alt="Team work"
                 ></amp-img>
               </div>
-              <div class="col-xs-12 col-md-6 gallery-fixed-container">
+              <div class="col-xs-12 col-md-6 gallery-fixed-container p-5">
                 <amp-img
                   class="contain"
                   layout="fill"
@@ -1039,7 +1039,7 @@
                   correct errors, and verify operational capability.
                 </h3>
               </article>
-              <div class="col-xs-12 col-md-6 gallery-fixed-container">
+              <div class="col-xs-12 col-md-6 gallery-fixed-container p-5">
                 <amp-img
                   class="contain"
                   layout="fill"
