--- a/index.html
+++ b/index.html
@@ -987,22 +987,9 @@
               system architectures that are maintainable, reliable, robust, and
               most importantly intelligent.
             </blockquote>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-              <path
-                fill="var(--primary)"
-                fill-opacity="1"
-                d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-              ></path>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-              <path
-                fill="#fff"
-                fill-opacity="1"
-                d="M0,288L48,250.7C96,213,192,139,288,106.7C384,75,480,85,576,112C672,139,768,181,864,186.7C960,192,1056,160,1152,176C1248,192,1344,256,1392,288L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-              ></path>
-            </svg>
+<h2>I have the:</h2>
             <section class="row mx-auto">
-              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
+              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border">
                 <h3>Ability to work well with others in a team or alone.</h3>
               </article>
               <div class="col-xs-12 col-md-6 p-5 bg-white">
