--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
       .bg-white {
         background: var(--white);
       }
-      .bg-white-light {
-        background: rgba(255, 255, 255, 0.7);
+      .border-white {
+        border: 1px solid var(--white);
       }
       .text-primary {
         color: var(--primary);
@@ -987,9 +987,11 @@
               system architectures that are maintainable, reliable, robust, and
               most importantly intelligent.
             </blockquote>
-<h2>I have the:</h2>
+            <h2>I have the:</h2>
             <section class="row mx-auto">
-              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border">
+              <article
+                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border-white"
+              >
                 <h3>Ability to work well with others in a team or alone.</h3>
               </article>
               <div class="col-xs-12 col-md-6 p-5 bg-white">
@@ -1012,13 +1014,17 @@
                   ></amp-img>
                 </figure>
               </div>
-              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
+              <article
+                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border-white"
+              >
                 <h3>
                   Ability to analyze software and hardware to find solutions
                   that meet user requirements.
                 </h3>
               </article>
-              <article class="col-xs-12 col-md-6 flex middle-xs center-xs p-5">
+              <article
+                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border-white"
+              >
                 <h3>
                   Ability to perform review of programs to improve efficiency,
                   correct errors, and verify operational capability.
