style="background: rgba(0, 0, 0, 0.8)"

--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
             <h2>I have the:</h2>
             <section class="row mx-auto">
               <article
-                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border-white"
+                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 pattern-circuit border-white"
               >
                 <h3>Ability to work well with others in a team or alone.</h3>
               </article>
@@ -1015,7 +1015,7 @@
                 </figure>
               </div>
               <article
-                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border-white"
+                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 pattern-circuit border-white"
               >
                 <h3>
                   Ability to analyze software and hardware to find solutions
@@ -1023,7 +1023,7 @@
                 </h3>
               </article>
               <article
-                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 border-white"
+                class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 pattern-circuit border-white"
               >
                 <h3>
                   Ability to perform review of programs to improve efficiency,
@@ -1050,7 +1050,7 @@
           aria-labelledby="competencies"
           option
         >
-          <amp-layout layout="container">
+          <amp-layout layout="container" style="background: rgba(0, 0, 0, 0.8)">
             <!-- core competencies section -->
             <section>
               <div class="inline-flex flex-column mb-3">
@@ -1574,7 +1574,7 @@
         </div>
         <!-- education panel -->
         <div id="tabpanel5" role="tabpanel" aria-labelledby="education" option>
-          <amp-layout layout="container">
+          <amp-layout layout="container" style="background: rgba(0, 0, 0, 0.8)">
             <!-- education section -->
             <section>
               <div class="inline-flex flex-column mb-3">
@@ -1757,7 +1757,11 @@
         </div>
         <!-- honors panel -->
         <div id="tabpanel6" role="tabpanel" aria-labelledby="honors" option>
-          <amp-layout layout="container" id="content" class="w-100">
+          <amp-layout
+            layout="container"
+            style="background: rgba(0, 0, 0, 0.8)"
+            class="w-100"
+          >
             <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Honors</h2>
               <div class="bg-primary" style="height: 2px"></div>
@@ -1824,7 +1828,7 @@
         </div>
         <!-- contacts panel -->
         <div id="tabpanel7" role="tabpanel" aria-labelledby="contacts" option>
-          <amp-layout layout="container">
+          <amp-layout layout="container" style="background: rgba(0, 0, 0, 0.8)">
             <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Contacts</h2>
               <div class="bg-primary" style="height: 2px"></div>
