--- a/index.html
+++ b/index.html
@@ -1499,75 +1499,67 @@
             <section class="row">
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
                 <article class="project card shadow h-100">
-                  <div class="icon"><i class="bi-node-plus"></i></div>
-                  <h3>
-                    <a
-                      href="https://github.com/Eliah7/RLPO-Python"
-                      class="text-white"
-                      target="_blank"
-                      rel="nofollow noreferrer"
-                      >Reinforcement Learning for Power Grid Optimization
-                    </a>
-                  </h3>
-                  <p>
-                    A project involving the use of reinforcement learning
-                    algorithms to create agents capable of acting optimally in a
-                    power grid environment.
-                  </p>
+                  <a
+                    href="https://github.com/Eliah7/RLPO-Python"
+                    class="text-white"
+                    target="_blank"
+                    rel="nofollow noreferrer"
+                  >
+                    <div class="icon"><i class="bi-node-plus"></i></div>
+                    <h3>Reinforcement Learning for Power Grid Optimization</h3>
+                    <p>
+                      A project involving the use of reinforcement learning
+                      algorithms to create agents capable of acting optimally in
+                      a power grid environment.
+                    </p>
+                  </a>
                 </article>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
-                <article class="project card shadow h-100">
-                  <div class="icon"><i class="bi-receipt"></i></div>
-                  <h3>
-                    <a
-                      href="https://smartstock.co.tz/"
-                      class="text-white"
-                      target="_blank"
-                      rel="nofollow noreferrer"
-                      >SmartStock
-                    </a>
-                  </h3>
-                  <p>
-                    Web application that helps businesses manage their stock,
-                    sales and accounts.
-                  </p>
-                </article>
+                <a
+                  href="https://smartstock.co.tz/"
+                  class="text-white"
+                  target="_blank"
+                  rel="nofollow noreferrer"
+                >
+                  <article class="project card shadow h-100">
+                    <div class="icon"><i class="bi-receipt"></i></div>
+                    <h3>SmartStock</h3>
+                    <p>
+                      Web application that helps businesses manage their stock,
+                      sales and accounts.
+                    </p>
+                  </article>
+                </a>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
-                <article class="project card shadow h-100">
-                  <div class="icon"><i class="bi-phone"></i></div>
-                  <h3>
-                    <a
-                      class="text-white"
-                      target="_blank"
-                      rel="nofollow noreferrer"
-                      >Ubongo Kids App
-                    </a>
-                  </h3>
-                  <p>
-                    Mobile App for children to watch and consume content from
-                    ubongo kids.
-                  </p>
-                </article>
+                <a class="text-white" target="_blank" rel="nofollow noreferrer">
+                  <article class="project card shadow h-100">
+                    <div class="icon"><i class="bi-phone"></i></div>
+                    <h3>Ubongo Kids App</h3>
+                    <p>
+                      Mobile App for children to watch and consume content from
+                      ubongo kids.
+                    </p>
+                  </article>
+                </a>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
-                <article class="project card shadow h-100">
-                  <div class="icon"><i class="bi-ui-radios"></i></div>
-                  <h3>
-                    <a
-                      href="https://lcds-940d1.web.app/"
-                      class="text-white"
-                      target="_blank"
-                      rel="nofollow noreferrer"
-                      >Lung Cancer Detection System
-                    </a>
-                  </h3>
-                  <p>
-                    A web application embedded with a deep learning model to
-                    detect presence of lung cancer in MRI images.
-                  </p>
-                </article>
+                <a
+                  href="https://lcds-940d1.web.app/"
+                  class="text-white"
+                  target="_blank"
+                  rel="nofollow noreferrer"
+                >
+                  <article class="project card shadow h-100">
+                    <div class="icon"><i class="bi-ui-radios"></i></div>
+                    <h3>Lung Cancer Detection System</h3>
+                    <p>
+                      A web application embedded with a deep learning model to
+                      detect presence of lung cancer in MRI images.
+                    </p>
+                  </article>
+                </a>
               </div>
             </section>
           </amp-layout>
