--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
       amp-img.cover img {
         object-fit: cover;
       }
+      amp-layout[layout="container"] {
+        padding: 1rem;
+      }
       @media (max-width: 500px) {
         #mega-menu {
           display: none;
@@ -702,6 +705,7 @@
       .mb-3 {
         margin-bottom: 1rem;
       }
+      .row,
       .mx-auto {
         margin-left: auto;
         margin-right: auto;
@@ -850,7 +854,7 @@
       </amp-layout>
       <!-- menu header section -->
       <amp-layout layout="container">
-        <nav class="container row middle-xs between-xs mx-auto">
+        <nav class="container row middle-xs between-xs">
           <amp-layout layout="container">
             <a href="" class="text-decoration-none"><b>Eliah Mbwilo</b></a>
           </amp-layout>
@@ -979,7 +983,11 @@
           option
           selected
         >
-          <amp-layout layout="container" style="background: rgba(0, 0, 0, 0.8)">
+          <amp-layout
+            layout="container"
+            style="background: rgba(0, 0, 0, 0.8)"
+            class="w-100"
+          >
             <h1>Eliah Mbwilo</h1>
             <h2>Computer Scientist</h2>
             <blockquote style="margin-left: 0">
@@ -988,7 +996,7 @@
               most importantly intelligent.
             </blockquote>
             <h2>I have the:</h2>
-            <section class="row mx-auto">
+            <section class="row">
               <article
                 class="col-xs-12 col-md-6 flex middle-xs center-xs p-5 pattern-circuit border-white"
               >
@@ -1050,7 +1058,11 @@
           aria-labelledby="competencies"
           option
         >
-          <amp-layout layout="container" style="background: rgba(0, 0, 0, 0.8)">
+          <amp-layout
+            layout="container"
+            style="background: rgba(0, 0, 0, 0.8)"
+            class="w-100"
+          >
             <!-- core competencies section -->
             <section>
               <div class="inline-flex flex-column mb-3">
@@ -1415,7 +1427,11 @@
           aria-labelledby="experiences"
           option
         >
-          <amp-layout layout="container">
+          <amp-layout
+            layout="container"
+            style="background: rgba(0, 0, 0, 0.8)"
+            class="w-100"
+          >
             <!-- experiences section -->
             <section>
               <div class="inline-flex flex-column mb-3">
@@ -1490,7 +1506,7 @@
           <amp-layout
             layout="container"
             style="background: rgba(0, 0, 0, 0.8)"
-            class="px-3 w-100"
+            class="w-100"
           >
             <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Projects</h2>
@@ -1498,13 +1514,13 @@
             </div>
             <section class="row">
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
-                <article class="project card shadow h-100">
-                  <a
-                    href="https://github.com/Eliah7/RLPO-Python"
-                    class="text-white"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                  >
+                <a
+                  href="https://github.com/Eliah7/RLPO-Python"
+                  class="text-white"
+                  target="_blank"
+                  rel="nofollow noreferrer"
+                >
+                  <article class="project card shadow h-100">
                     <div class="icon"><i class="bi-node-plus"></i></div>
                     <h3>Reinforcement Learning for Power Grid Optimization</h3>
                     <p>
@@ -1512,8 +1528,8 @@
                       algorithms to create agents capable of acting optimally in
                       a power grid environment.
                     </p>
-                  </a>
-                </article>
+                  </article>
+                </a>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
                 <a
@@ -1566,185 +1582,205 @@
         </div>
         <!-- education panel -->
         <div id="tabpanel5" role="tabpanel" aria-labelledby="education" option>
-          <amp-layout layout="container" style="background: rgba(0, 0, 0, 0.8)">
+          <amp-layout
+            layout="container"
+            style="background: rgba(0, 0, 0, 0.8)"
+            class="w-100"
+          >
             <!-- education section -->
-            <section>
-              <div class="inline-flex flex-column mb-3">
-                <h2 style="margin-bottom: 0.25rem">Education</h2>
-                <div class="bg-primary" style="height: 2px"></div>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  University of Dar es Salaam
-                </h4>
-                <caption>
-                  Bachelor of Science in Computer Science
-                </caption>
-                <p>
-                  <em>September, 2016 - 2019</em>
-                  &ensp;|&ensp;
-                  <small>Dar es Salaam</small>
-                </p>
-                <dl>
-                  <dd>GPA 4.1.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">Kibaha Secondary School</h4>
-                <caption>
-                  A-Level | ACSEE
-                </caption>
-                <p>
-                  <em>2014 - 2016</em>
-                  &ensp;|&ensp;
-                  <small>Pwani</small>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>Physics, Chemistry and Mathematics.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">Thomas More Machrina</h4>
-                <caption>
-                  O-Level | CSEE
-                </caption>
-                <p>
-                  <em>2011 - 2014</em>
-                  &ensp;|&ensp;
-                  <small>Dar es Salaam</small>
-                </p>
-              </div>
-            </section>
-            <!-- certificates section -->
-            <section>
-              <div class="inline-flex flex-column mb-3">
-                <h2 style="margin-bottom: 0.25rem">Certificates</h2>
-                <div class="bg-primary" style="height: 2px"></div>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Exploratory Data Analysis with Python and Pandas
-                </h4>
-                <caption>
-                  Coursera Project Network
-                </caption>
-                <p>
-                  <em>Nov 17, 2020</em>
-                </p>
-                <dl>
-                  <dd>An online non-credit course offered through Coursera.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Intermediate Machine Learning
-                </h4>
-                <caption>
-                  Kaggle
-                </caption>
-                <p>
-                  <em>June 3, 2020</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Introduction to Machine Learning
-                </h4>
-                <caption>
-                  Kaggle
-                </caption>
-                <p>
-                  <em>May 28, 2020</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">Deep Learning</h4>
-                <caption>
-                  DeepLearning.AI
-                </caption>
-                <p>
-                  <em>June 23, 2019</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>A 5-course specialization.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">Sequence Models</h4>
-                <caption>
-                  Coursera Project Network
-                </caption>
-                <p>
-                  <em>June 23, 2019</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course offered through Coursera.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Convolutional Neural Networks
-                </h4>
-                <caption>
-                  DeepLearning.AI
-                </caption>
-                <p>
-                  <em>May 6, 2019</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course offered through Coursera.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Structuring Machine Learning Projects
-                </h4>
-                <caption>
-                  Coursera Project Network
-                </caption>
-                <p>
-                  <em>Apr 10, 2019</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course offered through Coursera.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Improving Deep Neural Networks: Hyperparameter tuning,
-                  Regularization and Optimization
-                </h4>
-                <caption>
-                  Coursera Project Network
-                </caption>
-                <p>
-                  <em>Apr 3, 2019</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course offered through Coursera.</dd>
-                </dl>
-              </div>
-              <div class="resume-item">
-                <h4 class="text-primary uppercase">
-                  Neural Networks and Deep learning
-                </h4>
-                <caption>
-                  Coursera Project Network
-                </caption>
-                <p>
-                  <em>March 20, 2019</em>
-                </p>
-                <dl style="line-height: 24px">
-                  <dd>An online non-credit course offered through Coursera.</dd>
-                </dl>
-              </div>
-            </section>
+            <div class="row">
+              <section class="col-xs-12 col-md-6">
+                <div class="inline-flex flex-column mb-3">
+                  <h2 style="margin-bottom: 0.25rem">Education</h2>
+                  <div class="bg-primary" style="height: 2px"></div>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    University of Dar es Salaam
+                  </h4>
+                  <caption>
+                    Bachelor of Science in Computer Science
+                  </caption>
+                  <p>
+                    <em>September, 2016 - 2019</em>
+                    &ensp;|&ensp;
+                    <small>Dar es Salaam</small>
+                  </p>
+                  <dl>
+                    <dd>GPA 4.1.</dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Kibaha Secondary School
+                  </h4>
+                  <caption>
+                    A-Level | ACSEE
+                  </caption>
+                  <p>
+                    <em>2014 - 2016</em>
+                    &ensp;|&ensp;
+                    <small>Pwani</small>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>Physics, Chemistry and Mathematics.</dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">Thomas More Machrina</h4>
+                  <caption>
+                    O-Level | CSEE
+                  </caption>
+                  <p>
+                    <em>2011 - 2014</em>
+                    &ensp;|&ensp;
+                    <small>Dar es Salaam</small>
+                  </p>
+                </div>
+              </section>
+              <!-- certificates section -->
+              <section class="col-xs-12 col-md-6">
+                <div class="inline-flex flex-column mb-3">
+                  <h2 style="margin-bottom: 0.25rem">Certificates</h2>
+                  <div class="bg-primary" style="height: 2px"></div>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Exploratory Data Analysis with Python and Pandas
+                  </h4>
+                  <caption>
+                    Coursera Project Network
+                  </caption>
+                  <p>
+                    <em>Nov 17, 2020</em>
+                  </p>
+                  <dl>
+                    <dd>
+                      An online non-credit course offered through Coursera.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Intermediate Machine Learning
+                  </h4>
+                  <caption>
+                    Kaggle
+                  </caption>
+                  <p>
+                    <em>June 3, 2020</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>An online non-credit course.</dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Introduction to Machine Learning
+                  </h4>
+                  <caption>
+                    Kaggle
+                  </caption>
+                  <p>
+                    <em>May 28, 2020</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>An online non-credit course.</dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">Deep Learning</h4>
+                  <caption>
+                    DeepLearning.AI
+                  </caption>
+                  <p>
+                    <em>June 23, 2019</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>A 5-course specialization.</dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">Sequence Models</h4>
+                  <caption>
+                    Coursera Project Network
+                  </caption>
+                  <p>
+                    <em>June 23, 2019</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>
+                      An online non-credit course offered through Coursera.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Convolutional Neural Networks
+                  </h4>
+                  <caption>
+                    DeepLearning.AI
+                  </caption>
+                  <p>
+                    <em>May 6, 2019</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>
+                      An online non-credit course offered through Coursera.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Structuring Machine Learning Projects
+                  </h4>
+                  <caption>
+                    Coursera Project Network
+                  </caption>
+                  <p>
+                    <em>Apr 10, 2019</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>
+                      An online non-credit course offered through Coursera.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Improving Deep Neural Networks: Hyperparameter tuning,
+                    Regularization and Optimization
+                  </h4>
+                  <caption>
+                    Coursera Project Network
+                  </caption>
+                  <p>
+                    <em>Apr 3, 2019</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>
+                      An online non-credit course offered through Coursera.
+                    </dd>
+                  </dl>
+                </div>
+                <div class="resume-item">
+                  <h4 class="text-primary uppercase">
+                    Neural Networks and Deep learning
+                  </h4>
+                  <caption>
+                    Coursera Project Network
+                  </caption>
+                  <p>
+                    <em>March 20, 2019</em>
+                  </p>
+                  <dl style="line-height: 24px">
+                    <dd>
+                      An online non-credit course offered through Coursera.
+                    </dd>
+                  </dl>
+                </div>
+              </section>
+            </div>
           </amp-layout>
         </div>
         <!-- honors panel -->
@@ -1833,7 +1869,7 @@
                     style="font-size: 2rem; color: var(--primary)"
                   ></i>
                   <h3>My Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Dar es Salaam, Tanzania</p>
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 flex items-stretch mb-3">
