--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
             </li>
             <li class="px-1">
               <a
-                href=""
+                href="https://www.linkedin.com/in/eliah-m-106761123/"
                 class="text-decoration-none"
                 target="_blank"
                 rel="nofollow noreferrer"
@@ -1523,7 +1523,7 @@
                   <article class="project card shadow h-100">
                     <div class="icon"><i class="bi-node-plus"></i></div>
                     <h3>Reinforcement Learning for Power Grid Optimization</h3>
-                    <p>
+                    <p class="text-decoration-none">
                       A project involving the use of reinforcement learning
                       algorithms to create agents capable of acting optimally in
                       a power grid environment.
@@ -1541,7 +1541,7 @@
                   <article class="project card shadow h-100">
                     <div class="icon"><i class="bi-receipt"></i></div>
                     <h3>SmartStock</h3>
-                    <p>
+                    <p class="text-decoration-none">
                       Web application that helps businesses manage their stock,
                       sales and accounts.
                     </p>
@@ -1553,7 +1553,7 @@
                   <article class="project card shadow h-100">
                     <div class="icon"><i class="bi-phone"></i></div>
                     <h3>Ubongo Kids App</h3>
-                    <p>
+                    <p class="text-decoration-none">
                       Mobile App for children to watch and consume content from
                       ubongo kids.
                     </p>
@@ -1570,7 +1570,7 @@
                   <article class="project card shadow h-100">
                     <div class="icon"><i class="bi-ui-radios"></i></div>
                     <h3>Lung Cancer Detection System</h3>
-                    <p>
+                    <p class="text-decoration-none">
                       A web application embedded with a deep learning model to
                       detect presence of lung cancer in MRI images.
                     </p>
@@ -1925,7 +1925,7 @@
                     </li>
                     <li class="px-1">
                       <a
-                        href=""
+                        href="https://www.linkedin.com/in/eliah-m-106761123/"
                         class="text-decoration-none"
                         target="_blank"
                         rel="nofollow noreferrer"
